config/k8s/bathysphere-graph.yml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  externalTrafficPolicy: Cluster
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bathysphere
  namespace: bathysphere
spec:
  rules:
    - host: db.oceanics.io
      http:
        paths:
          - path: /browser
            backend:
              serviceName: bathysphere-graph-neo4j
              servicePort: 7474

          - path: /neo4j
            backend:
              serviceName: bathysphere-graph-neo4j
              servicePort: 7687
---
apiVersion: v1
kind: Service
metadata:
  name: bathysphere-graph-neo4j
  namespace: bathysphere
spec:
  selector:
    name: bathysphere-graph-neo4j
  ports:
  - port: 7474
    targetPort: 7474
    protocol: TCP
    name: http
  - port: 7473
    targetPort: 7473
    protocol: TCP
    name: https
  - port: 7687
    targetPort: 7687
    protocol: TCP
    name: bolt
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bathysphere-graph-neo4j
  namespace: bathysphere
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bathysphere-graph-neo4j

  template:
    metadata:
      name: bathysphere-graph-neo4j
      namespace: bathysphere
      labels:
        app: bathysphere-graph-neo4j

    spec:
      restartPolicy: Always

      containers:
        - name: neo4j
          image: oceanicsdotio/neo4j
          ports:
            - containerPort: 7474
              name: browser
            - containerPort: 7687
              name: bolt
          volumeMounts:
            - name: graph-database
              mountPath: /data
#            - name: plugins
#              mountPath: /plugins

#        - name: bathysphere-graph
#          image: nginx
#          env:
#            - name: NEO4J_AUTH
#              valueFrom:
#                secretKeyRef:
#                  name: bathysphere-graph-secret-1
#                  key: NEO4J_AUTH
#          volumeMounts:
#            - name: secrets-volume
#              mountPath: /secrets/neo4j
#              readOnly: true

      volumes:

#        - name: secrets-volume
#          secret:
#            secretName: bathysphere-graph
#
        - name: graph-database
          persistentVolumeClaim:
            claimName: graphdb-pvc
